--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2019, 2020, Alex Willmer <alex@moreati.org.uk>
+# SPDX-License-Identifier: Apache-2.0
 # https://editorconfig.org/
 
 [*]
